--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
                     <input type="text" name="display" id="number">
                 </div>
                 <div>
-                    <input type="button" value="AC" id="ac">
-                    <input type="button" value="DE" id="delete">
-                    <input type="button" value="." id="dot">
-                    <input type="button" value="/" id="divided">
+                    <input type="button" value="AC" onclick="display.value = ''" id="ac">
+                    <input type="button" value="DE" onclick="display.value = display.value.toString().slice(0,-1)" id="delete">
+                    <input type="button" value="." onclick="display.value += '.'" id="dot">
+                    <input type="button" value="/" onclick="display.value += '/'" id="divided">
                 </div>
                 <div>
-                    <input type="button" value="7" id="seven">
-                    <input type="button" value="8" id="eight">
-                    <input type="button" value="9" id="nine">
-                    <input type="button" value="*" id="multiply">
+                    <input type="button" value="7" onclick="display.value += '7'" id="seven">
+                    <input type="button" value="8" onclick="display.value += '8'" id="eight">
+                    <input type="button" value="9" onclick="display.value += '9'" id="nine">
+                    <input type="button" value="*" onclick="display.value += '*'" id="multiply">
                 </div>
                 <div>
-                    <input type="button" value="4" id="four">
-                    <input type="button" value="5" id="five">
-                    <input type="button" value="6" id="six">
-                    <input type="button" value="-" id="minus">
+                    <input type="button" value="4" onclick="display.value += '4'" id="four">
+                    <input type="button" value="5" onclick="display.value += '5'" id="five">
+                    <input type="button" value="6" onclick="display.value += '6'" id="six">
+                    <input type="button" value="-" onclick="display.value += '-'" id="minus">
                 </div>
                 <div>
-                    <input type="button" value="1" id="one">
-                    <input type="button" value="2" id="two">
-                    <input type="button" value="3" id="three">
-                    <input type="button" value="+" id="plus">
+                    <input type="button" value="1" onclick="display.value += '1'" id="one">
+                    <input type="button" value="2" onclick="display.value += '2'" id="two">
+                    <input type="button" value="3" onclick="display.value += '3'" id="three">
+                    <input type="button" value="+" onclick="display.value += '+'" id="plus">
                 </div>
                 <div>
-                    <input type="button" value="00" id="dbzero">
-                    <input type="button" value="0" id="zero">
-                    <input type="button" value="=" id="equal">
+                    <input type="button" value="00" onclick="display.value += '00'" id="dbzero">
+                    <input type="button" value="0" onclick="display.value += '0'" id="zero">
+                    <input type="button" value="=" onclick="display.value = eval(display.value)" class="equal">
                 </div>
             </form>
         </div>
